Style: fixes image alignment

--- a/src/Post.css
+++ b/src/Post.css
@@ -49,7 +49,7 @@
   width: 100%;
   height: 500px;
   object-fit: contain;
-  margin: -4px;
+  /* margin: -4px; */
 }
 
 .post__options {
